[package]
name = "wx-wasm-pack"
version = "0.3.0"
edition = "2021"

[dependencies]
wasm-pack = "0.13.1"
env_logger = { version = "0.10.0", default-features = false }
anyhow = "1.0.68"
clap = { version = "4.2.5", features = ["derive"] }
human-panic = "1.0.3"

[patch.crates-io]
wasm-pack = { path = "/root/workspace/master/wasm-pack" }
